--- a/registration/index.html
+++ b/registration/index.html
@@ -53,7 +53,7 @@
         </p>
      <p>
          
-    Please click on the following link to register for the workshop:  <a href="https://forms.gle/UJZyB5CyGFySXwLt9">Registration</a>        
+    Please click on the following link to register for the workshop:  <a href="https://forms.gle/uMqRygbUfTjwa9VY6">Registration</a>        
     
         </p> 
          <p>
