--- a/program/index.html
+++ b/program/index.html
@@ -48,8 +48,7 @@
     </table>
     
     <p>
-        Program coming soon.
-    </p>
+        The program is now available! You can download it here: <embed src="program/Schedule.pdf" type="application/pdf" width="100%" height="600px" /></p>
     <!--
     <table>
         <tr>
