--- a/program/index.html
+++ b/program/index.html
@@ -54,6 +54,16 @@
         Please note the program may be subject to slight changes.
         
         <embed src="program/Schedule.pdf" type="application/pdf" width="100%" height="600px" /></p>
+
+    <img class="center" src="assets/program1.jpeg" alt="Program 1" id="Program1">
+
+    <img class="center" src="assets/program2.jpeg" alt="Program 2" id="Program2">
+
+    <img class="center" src="assets/program3.jpeg" alt="Program 3" id="Program3">
+
+    <img class="center" src="assets/program4.jpeg" alt="Program 4" id="Program4">
+
+   
     <!--
     <table>
         <tr>
