--- a/program/index.html
+++ b/program/index.html
@@ -53,7 +53,7 @@
         
         Please note the program may be subject to slight changes.
         
-        <embed src="program/Schedule.pdf" type="application/pdf" width="100%" height="600px" /></p>
+        <!-- <embed src="program/Schedule.pdf" type="application/pdf" width="100%" height="600px" /></p> -->
 
     <img class="center" src="assets/program1.jpg" alt="Program 1" id="Program1">
 
